--- a/miniChallenge/Base.lproj/Main.storyboard
+++ b/miniChallenge/Base.lproj/Main.storyboard
@@ -30,7 +30,7 @@
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lyx-Ix-VwP">
-                                <rect key="frame" x="267" y="278" width="202" height="55"/>
+                                <rect key="frame" x="267" y="278" width="202" height="54.666666666666686"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="lyx-Ix-VwP" secondAttribute="height" multiplier="181:49" id="L0t-y4-hr4"/>
                                 </constraints>
@@ -41,7 +41,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleAspectFit" layoutMarginsFollowReadableWidth="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UBV-ig-y3l">
-                                <rect key="frame" x="267" y="341" width="202" height="54"/>
+                                <rect key="frame" x="267" y="330.66666666666669" width="202" height="54.666666666666629"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="UBV-ig-y3l" secondAttribute="height" multiplier="181:49" id="goY-cN-ysu"/>
                                 </constraints>
@@ -57,7 +57,7 @@
                             <constraint firstItem="lyx-Ix-VwP" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="76i-Uy-ZrX"/>
                             <constraint firstItem="lyx-Ix-VwP" firstAttribute="top" secondItem="75D-aW-781" secondAttribute="bottom" priority="750" constant="8" symbolic="YES" id="L6I-DQ-zNb"/>
                             <constraint firstItem="75D-aW-781" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.34" id="PP9-M7-0d3"/>
-                            <constraint firstItem="UBV-ig-y3l" firstAttribute="top" secondItem="lyx-Ix-VwP" secondAttribute="bottom" constant="8" symbolic="YES" id="QSd-nA-X1a"/>
+                            <constraint firstItem="UBV-ig-y3l" firstAttribute="top" secondItem="lyx-Ix-VwP" secondAttribute="bottom" multiplier="0.97" constant="8" symbolic="YES" id="QSd-nA-X1a"/>
                             <constraint firstItem="lyx-Ix-VwP" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.275" id="ZwW-76-Qoi"/>
                             <constraint firstItem="75D-aW-781" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="fVU-oX-63A"/>
                             <constraint firstItem="75D-aW-781" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" multiplier="0.7" id="mna-zW-xb1"/>
@@ -98,13 +98,13 @@
                                 </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="settings lettering" translatesAutoresizingMaskIntoConstraints="NO" id="pcV-kg-TJf">
-                                <rect key="frame" x="221" y="17" width="294" height="49"/>
+                                <rect key="frame" x="221" y="17.333333333333329" width="294" height="48.333333333333343"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="pcV-kg-TJf" secondAttribute="height" multiplier="67:11" id="S9b-P8-pSa"/>
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pAs-Se-YS0">
-                                <rect key="frame" x="242" y="138" width="121" height="97"/>
+                                <rect key="frame" x="242" y="138.33333333333334" width="121" height="96.333333333333314"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="pAs-Se-YS0" secondAttribute="height" multiplier="63:50" id="oQ0-TN-rvV"/>
                                 </constraints>
@@ -114,7 +114,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6LG-8d-8BH">
-                                <rect key="frame" x="377" y="138" width="121" height="97"/>
+                                <rect key="frame" x="377" y="138.33333333333334" width="121" height="96.333333333333314"/>
                                 <state key="normal" backgroundImage="sound off"/>
                                 <connections>
                                     <action selector="toggleSound:" destination="0P5-6s-CiY" eventType="touchUpInside" id="YpK-rH-tWW"/>
@@ -161,13 +161,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="character selection lettering" translatesAutoresizingMaskIntoConstraints="NO" id="vVf-Xg-fXT">
-                                <rect key="frame" x="110" y="15" width="516" height="53"/>
+                                <rect key="frame" x="110" y="15.333333333333332" width="516" height="52.333333333333343"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="vVf-Xg-fXT" secondAttribute="height" multiplier="423:43" id="Swr-4m-ruK"/>
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mmZ-MY-1VV">
-                                <rect key="frame" x="267" y="338" width="202" height="55"/>
+                                <rect key="frame" x="267" y="338.33333333333331" width="202" height="54.333333333333371"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="mmZ-MY-1VV" secondAttribute="height" multiplier="26:7" id="vuM-Ib-9XA"/>
                                 </constraints>
@@ -177,7 +177,7 @@
                                 </connections>
                             </button>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Sef-B9-Vt5">
-                                <rect key="frame" x="0.0" y="68" width="736" height="270"/>
+                                <rect key="frame" x="0.0" y="67.666666666666686" width="736" height="270.66666666666663"/>
                                 <color key="backgroundColor" red="0.026610895990000001" green="0.12884044650000001" blue="0.17059215899999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="tintColor" red="0.026610895990000001" green="0.12884044650000001" blue="0.17059215899999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="6T7-JU-g96">
@@ -188,7 +188,7 @@
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="charCell" id="c1Y-3m-bnx" customClass="CharCollectionViewCell">
-                                        <rect key="frame" x="0.0" y="12" width="168" height="247"/>
+                                        <rect key="frame" x="0.0" y="11.666666666666666" width="168" height="247"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="0.0" y="0.0" width="168" height="247"/>
@@ -214,7 +214,7 @@
                                 </cells>
                             </collectionView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6vx-Sd-VJS">
-                                <rect key="frame" x="35" y="28" width="40" height="27"/>
+                                <rect key="frame" x="35" y="28.333333333333336" width="40" height="26.333333333333336"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="6vx-Sd-VJS" secondAttribute="height" multiplier="23:15" id="1Tp-4S-4ob"/>
                                 </constraints>
@@ -257,7 +257,7 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="9bx-fU-zt7" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="uEb-ZN-0S2">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="uEb-ZN-0S2">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
